fix/overlay z-index

--- a/style.css
+++ b/style.css
@@ -9,10 +9,11 @@
     height: 100%;
     position: fixed;
     
-    z-index: 1;
+    z-index: -1;
 }
 .active{
 background-color: rgba(0,0,0,0.5);
+z-index: 1;
 }
 
 nav{
